--- a/style.css
+++ b/style.css
@@ -467,6 +467,9 @@ p {
 	font-size: 18px;
 	margin-top: 10px;
 	color: #060606;
+	list-style-type: disc; /* You can change 'disc' to 'circle' or 'square' for different bullet styles */
+        margin-left: 20px; /* Adjust the margin as needed to control spacing */
+}
   }
   
 
@@ -661,6 +664,8 @@ p {
 	margin-top: 15px;
 	margin-bottom: 10px;
 	color: #060606;
+	list-style-type: disc; /* You can change 'disc' to 'circle' or 'square' for different bullet styles */
+        margin-left: 20px; /* Adjust the margin as needed to control spacing */
   }
   
 
