--- a/style.css
+++ b/style.css
@@ -465,7 +465,8 @@ p {
 
 .experience-slides ul {
 	font-size: 18px;
-	margin-top: 10px;
+	margin-top: 15px;
+	margin-bottom: 10px;
 	color: #060606;
 	list-style-type: disc; /* You can change 'disc' to 'circle' or 'square' for different bullet styles */
         margin-left: 20px; /* Adjust the margin as needed to control spacing */
