--- a/style.css
+++ b/style.css
@@ -444,6 +444,7 @@ p {
 	align-items: center;
 	max-width: 1000px;
 	position: relative;
+	padding: 20px;
 	margin: auto;
 	overflow: hidden;
 	border: 2px solid #ccc;
@@ -481,7 +482,8 @@ p {
 
 .experience-slides li {
 	font-size: 18px;
-	margin-bottom: 5px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 	color: #060606; 
   }
   
@@ -638,6 +640,7 @@ p {
 	align-items: center;
 	max-width: 1000px;
 	position: relative;
+	padding: 20px;
 	margin: auto;
 	overflow: hidden;
 	border: 2px solid #ccc;
@@ -677,7 +680,8 @@ p {
 
 .education-slides li {
 	font-size: 18px;
-	margin-bottom: 5px;
+	margin-bottom: 1px;
+	margin-top: 10px;
 	color: #060606; 
   }
 
