--- a/style.css
+++ b/style.css
@@ -836,6 +836,8 @@ p {
 }
 #projects .project-info p {
 	color: white;
+	text-align: justify;
+	font-size: 18px;
 }
 #projects .project-img {
 	flex-basis: 50%;
