--- a/style.css
+++ b/style.css
@@ -852,8 +852,8 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #75808b 100%);
-	opacity: 0.7;
+/* 	background-image: linear-gradient(60deg, #29323c 0%, #75808b 100%);
+	opacity: 0.7; */
 }
 #projects .project-img img {
 	transition: 0.3s ease transform;
