--- a/style.css
+++ b/style.css
@@ -788,10 +788,89 @@ p {
 
 
 
-/* Projects section */
+/* -------------------  Start of Project section  --------------------- */
+body, h1, h2, h3, p {
+	margin: 0;
+	padding: 0;
+  }
+  
+  /* Set body background and text color */
+  body {
+	background-color: #f4f4f4;
+	font-family: Arial, sans-serif;
+	color: #333;
+  }
+  
+  /* Center the project section */
+  #projects {
+	text-align: center;
+	padding: 20px 0;
+  }
+  
+  /* Style project card container */
+  .project-grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr); /* 4 cards in a row */
+	gap: 20px; /* Gap between cards */
+	max-width: 1600px;
+	margin: 0 auto;
+	padding: 20px;
+  }
+  
+  /* Style project cards */
+  .project-card {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	border: 1px solid #ddd;
+	background-color: #fff;
+	padding: 20px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	transition: transform 0.3s, box-shadow 0.3s;
+  }
+  
+  .project-card img {
+	max-width: 100%;
+	height: 350px;
+	margin-bottom: 10px;
+	border: 1px solid #070707;
+  }
+  
+  .project-card h1 {
+	margin-top: 10px;
+	font-size: 20px;
+	color: #060606;
+  }
+  
+  .project-card p {
+	font-size: 20px;
+	margin-top: 5px;
+	font-size: 16px;
+	color: #000000;
+	text-align: justify;
+  }
+
+  .details-button {
+	display: inline-block;
+	margin-top: 10px;
+	padding: 8px 16px;
+	background-color: #67696a;
+	color: #fff;
+	text-decoration: none;
+	border-radius: 4px;
+  }
+  
+  /* Responsive Design */
+  @media (max-width: 768px) {
+	.project-grid {
+	  grid-template-columns: repeat(2, 1fr);
+	}
+}
+
 #projects .projects {
 	flex-direction: column;
-	max-width: 1200px;
+	max-width: 1600px;
 	margin: 0 auto;
 	padding: 100px 0;
 }
@@ -825,20 +904,7 @@ p {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	color: white;
 }
-#projects .project-info h1 {
-	font-size: 4rem;
-	font-weight: 500;
-}
-#projects .project-info h2 {
-	font-size: 1.8rem;
-	font-weight: 500;
-	margin-top: 10px;
-}
-#projects .project-info p {
-	color: white;
-	text-align: justify;
-	font-size: 18px;
-}
+
 #projects .project-img {
 	flex-basis: 50%;
 	height: 300px;
@@ -852,8 +918,8 @@ p {
 	top: 0;
 	height: 100%;
 	width: 100%;
-/* 	background-image: linear-gradient(60deg, #29323c 0%, #75808b 100%);
-	opacity: 0.7; */
+	background-image: linear-gradient(60deg, #29323c 0%, #75808b 100%);
+	opacity: 0.7;
 }
 #projects .project-img img {
 	transition: 0.3s ease transform;
@@ -861,7 +927,20 @@ p {
 #projects .project-item:hover .project-img img {
 	transform: scale(1.1);
 }
-/* End Projects section */
+#projects .section-title {
+	font-size: 4rem;
+	font-weight: 300;
+	color: black;
+	margin-bottom: 10px;
+	text-transform: uppercase;
+	letter-spacing: 0.2rem;
+	text-align: center;
+}
+
+#projects .section-title span {
+	color: crimson;
+}
+/* --------------------   End of Project section ------------------------- */
 
 
 
