--- a/style.css
+++ b/style.css
@@ -957,6 +957,77 @@ body, h1, h2, h3, p {
 	color: #0056b3; /* Change the text color on hover */
   }
 
+/* ============================= */
+
+
+/* Slideshow Styles */
+#projects .slideshow-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+	overflow: hidden;
+  }
+  
+  .project-slides img {
+	max-width: 100%;
+	height: 350px;
+	margin-bottom: 10px;
+	border: 1px solid #070707;
+	/* flex-basis: 50%;
+	height: 300px;
+	overflow: hidden;
+	position: relative; */
+  }
+  
+  .project-slides h3, .project-slides p {
+	font-size: 15px;
+	text-align:center ;
+	padding: 6px;
+	color: #060606;
+  }
+
+  #projects .mySlides {
+	display: none;
+	text-align: left;
+  }
+  
+  #projects .slide-content {
+	flex-basis: 70%;
+	width: 100%;  
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+	top: 0;
+	left: 0;
+	box-sizing: border-box;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	font-size: 18px;
+  }
+  
+  #projects .dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 3px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+  }
+    
+  #projects .active,
+  #projects .dot:hover {
+	background-color: #973c3c;
+  }
+
+
+
+/* ============================== */
+
 /* --------------------   End of Project section ------------------------- */
 
 
